style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
}
html {
  scroll-behavior: smooth;
}
.max-width {
  max-width: 1300px;
  padding: 0 80px;
  margin: auto;
}
/* navbar styling  */
.navbar {
  position: fixed;
  width: 100%;
  z-index: 999;
  padding: 30px 0;
  /* background: crimson; */
  font-family: 'Ubuntu', sans-serif;
  transition: all 0.3s ease;
}
.navbar.sticky {
  padding: 15px 0;
  background: #5c7c8b;
  /* background: crimson; */
}
.navbar .max-width {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.navbar .logo a{
  color: #fff;
  font-size: 35px;
  font-weight: 600;
  transition: color 0.3 ease;
}
.navbar .logo a:hover {
  color: black;
}
.navbar .logo a span {
  color: black;
}
.navbar.sticky .logo a {
  color: black;
  transition: color 0.3 ease;
}
.navbar.sticky .logo a span {
  color: white;
  transition: color 0.3 ease;
}
/* .navbar .logo a:hover span {
  color: black;
} */
.navbar .menu li {
  list-style: none;
  display: inline-block;
}
.navbar .menu li a {
  display: block;
  color: #fff;
  font-size: 18px;
  font-weight: 500;
  margin-left: 25px;
  transition: color 0.3s ease;
}
.navbar .menu li a:hover {
  color: black;
}
.navbar.sticky .menu li a:hover {
  color: black;
}
/* menu btn styling  */
.menu-btn {
  color: #fff;
  font-size: 23px;
  cursor: pointer;
  display: none;
}
.scroll-up-btn {
  position: fixed;
  height: 45px;
  width: 45px;
  background: crimson;
  right: 30px;
  bottom: 10px;
  text-align: center;
  line-height: 45px;
  color: #fff;
  z-index: 9999;
  font-size: 30px;
  border-radius: 6px;
  cursor: pointer;
  opacity: 0;
  pointer-events: none;
  transition: all 0.3s ease;
}
.scroll-up-btn.show {
  bottom: 30px;
  opacity: 1;
  pointer-events: auto;
}
/* home section styling  */
.home {
  display: flex;
  background: url("images/blood_mountain.jpg") no-repeat center;
  height: 100vh;
  background-size: cover;
  background-attachment: fixed;
  color: #fff;
  min-height: 500px;
  font-family: 'Ubuntu', sans-serif;
}
.home .max-width {
  margin: auto 0 auto 40px;

}
.home .home-content .text-1 {
  font-size: 27px;
}
.home .home-content .text-2 {
  font-size: 72px;
  font-weight: 600;
  margin-left: -3px;
}
.home .home-content .text-3 {
  font-size: 40px;
  margin: 5px 0;
}
.home .home-content .text-3 span {
  color: black;
  font-weight: 500;
}
.home .home-content a {
  display: inline-block;
  background: crimson;
  color: #fff;
  font-size: 25px;
  padding: 12px 36px;
  margin-top: 20px;
  border-radius: 6px;
  border: 2px solid crimson;
  transition: all 0.3s ease;
}
.home .home-content a:hover {
  color: crimson;
  background: none;
}
/* all similar content styling code */
section {
  padding: 100px 0;
}
.about, .life, .skills, .projects, .contact, footer {
  font-family: 'Poppins', sans-serif;
}
.about .about-content,
.life .life-content,
.skills .skills-content,
.contact .contact-content {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
}
section .title {
  position: relative;
  text-align: center;
  font-size: 40px;
  font-weight: 500;
  margin-bottom: 60px;
  padding-bottom: 20px;
  font-family: 'Ubuntu', sans-serif;
}
section .title::before {
  content: "";
  position: absolute;
  bottom: 0px;
  left: 50%;
  width: 180px;
  height: 3px;
  background: black;
  transform: translateX(-50%);
}
section .title::after {
  position: absolute;
  bottom: -12px;
  left: 50%;
  font-size: 20px;
  color: crimson;
  padding: 5px;
  background: white;
  transform: translateX(-50%);
}
/* about section styling  */
.about .title::after{
  content: "who i am";
}
br.responsive {
  display: none;
}
.about .about-content .left {
  width: 45%;
}
.about .about-content .left img{
  /* height: 400px;
  width: 400px;
  object-fit: cover;
  border-radius: 6px; */
  height: 400px;
  width: 400px;
  object-fit: contain;
  border-radius: 6px;
}
.about .about-content .right {
  width: 55%;
}
.about .about-content .right .text {
font-size: 25px;
font-weight: 600;
margin-bottom: 10px;
}
.about .about-content .right .text span {
  color: crimson;
}
.about .about-content .right p {
  text-align: justify;
}
.about .about-content .right a {
  display: inline-block;
  background: crimson;
  color: #fff;
  font-size: 20px;
  font-weight: 500;
  padding: 10px 30px;
  margin-top: 20px;
  border-radius: 6px;
  border: 2px solid crimson;
  transition: all 0.3s ease;
}
.about .about-content .right a:hover {
  color: crimson;
  background: none;
}
/* life section styling */
.life, .projects {
  color: #fff;
  background: #111;
}
.life .title::before,
.projects .title::before {
  background: #fff;
}
.life .title::after,
.projects .title::after {
  background: #111;
  content: "what i enjoy";
}
.life .life-content .card {
  width: calc(33% - 20px);
  min-height: 420px;
  background: #222;
  text-align: center;
  border-radius: 6px;
  padding: 20px 25px;
  /* cursor: pointer; */
  transition: all 0.3s ease;
}
/* .life .life-content .card:hover {
  background: crimson;
} */

.life .life-content .card .box {
  transition: all 0.3s ease;
}
/* .life .life-content .card:hover .box {
  transform: scale(1.05);

} */
.life .life-content .card i {
  font-size: 50px;
  color: crimson;
  transition: all 0.3s ease;
}
/* .life .life-content .card:hover i {
  color: #fff;
} */
.life .life-content .card .text {
  font-size: 25px;
  font-weight: 500;
  margin: 10px 0 10px 0;
}

/* skills section styling  */
.skills .title::after {
  content: "what i know";
}
.skills .skills-content .column {
  width: calc(50% - 30px);
}
.skills .skills-content .left .text{
  font-size: 20px;
  font-weight: 600;
  margin-bottom: 10px;
}
.skills .skills-content .left p {
  text-align: justify;
}
/* ... */

